# ipca-state

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
examples/: basic_import.py
github/workflows/: docs.yml
src/ipca/: __init__.py  ipca.py
src/sc_ipca/: __init__.py  instruments.py  ipca.py
tests/: test_imports.py
